feat: move gitlab repo updates #1

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,62 +1,74 @@
 {
-  "name": "gandalf",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "node ./node_modules/@angular/cli/bin/ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "test-ci": "ng test --watch=false",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run lint",
-      "commit-msg": "npx commitlint -e %HUSKY_GIT_PARAMS%"
-    }
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~9.1.9",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.1.9",
-    "@angular/compiler": "~9.1.9",
-    "@angular/core": "~9.1.9",
-    "@angular/forms": "~9.1.9",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~9.1.9",
-    "@angular/platform-browser-dynamic": "~9.1.9",
-    "@angular/router": "~9.1.9",
-    "@ngrx/effects": "^9.2.0",
-    "@ngrx/schematics": "^9.2.0",
-    "@ngrx/store": "^9.2.0",
-    "@ngrx/store-devtools": "^9.2.0",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/cli": "~9.1.7",
-    "@angular/compiler-cli": "~9.1.9",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-angular": "^8.3.4",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "husky": "^4.2.5",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
-  }
+	"name": "gandalf",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "node ./node_modules/@angular/cli/bin/ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"test": "ng test",
+		"test-ci": "ng test --watch=false",
+		"lint": "ng lint",
+		"e2e": "ng e2e",
+		"pretty-quick": "pretty-quick --staged"
+	},
+	"husky": {
+		"hooks": {
+			"pre-push": "npm run lint && npm run pretty-quick",
+			"commit-msg": "npx commitlint -e %HUSKY_GIT_PARAMS%"
+		}
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "~9.1.9",
+		"@angular/cdk": "^9.2.4",
+		"@angular/common": "~9.1.9",
+		"@angular/compiler": "~9.1.9",
+		"@angular/core": "~9.1.9",
+		"@angular/forms": "~9.1.9",
+		"@angular/material": "^9.2.4",
+		"@angular/platform-browser": "~9.1.9",
+		"@angular/platform-browser-dynamic": "~9.1.9",
+		"@angular/router": "~9.1.9",
+		"@ngrx/effects": "^9.2.0",
+		"@ngrx/schematics": "^9.2.0",
+		"@ngrx/store": "^9.2.0",
+		"@ngrx/store-devtools": "^9.2.0",
+		"codejar": "^3.0.0",
+		"highlight.js": "^10.1.1",
+		"prism": "^4.1.2",
+		"prismjs": "^1.20.0",
+		"monaco-editor": "^0.20.0",
+		"monaco-editor-webpack-plugin": "^1.9.0",
+		"rxjs": "~6.5.4",
+		"tslib": "^1.10.0",
+		"zone.js": "~0.10.2"
+	},
+	"devDependencies": {
+		"@angular-builders/custom-webpack": "^9.1.0",
+		"@angular-devkit/build-angular": "~0.901.7",
+		"@angular/cli": "~9.1.7",
+		"@angular/compiler-cli": "~9.1.9",
+		"@commitlint/cli": "^8.3.5",
+		"@commitlint/config-angular": "^8.3.4",
+		"@types/jasmine": "~3.5.0",
+		"@types/jasminewd2": "~2.0.3",
+		"@types/node": "^12.11.1",
+		"@types/prismjs": "^1.16.1",
+		"codelyzer": "^5.1.2",
+		"husky": "^4.2.5",
+		"jasmine-core": "~3.5.0",
+		"jasmine-spec-reporter": "~4.2.1",
+		"karma": "~5.0.0",
+		"karma-chrome-launcher": "~3.1.0",
+		"karma-coverage-istanbul-reporter": "~2.1.0",
+		"karma-jasmine": "~3.0.1",
+		"karma-jasmine-html-reporter": "^1.4.2",
+		"prettier": "^2.0.5",
+		"pretty-quick": "^2.0.1",
+		"protractor": "~7.0.0",
+		"ts-node": "~8.3.0",
+		"tslint": "~6.1.0",
+		"tslint-config-prettier": "^1.18.0",
+		"typescript": "~3.8.3"
+	}
 }
