feat(gandalf/frontend): signin added

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -129,6 +129,7 @@
   },
   "defaultProject": "gandalf",
   "cli": {
-    "defaultCollection": "@ngrx/schematics"
+    "defaultCollection": "@ngrx/schematics",
+    "analytics": false
   }
 }
