--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -71,7 +71,8 @@
                 "serve": {
                     "builder": "@angular-builders/custom-webpack:dev-server",
                     "options": {
-                        "browserTarget": "gandalf:build"
+                        "browserTarget": "gandalf:build",
+                        "proxyConfig": "./proxy.conf.json"
                     },
                     "configurations": {
                         "production": {
