--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,6 @@
 		"@angular/compiler": "~9.1.9",
 		"@angular/core": "~9.1.9",
 		"@angular/fire": "5.4.2",
-		"firebase": "5.4.2",
 		"@angular/forms": "~9.1.9",
 		"@angular/material": "^9.2.4",
 		"@angular/platform-browser": "~9.1.9",
@@ -38,6 +37,7 @@
 		"@ngrx/store-devtools": "^9.2.0",
 		"angularfire2": "^5.4.2",
 		"codejar": "^3.0.0",
+		"firebase": "^7.17.1",
 		"highlight.js": "^10.1.1",
 		"monaco-editor": "^0.20.0",
 		"monaco-editor-webpack-plugin": "^1.9.0",
