feat: Allow user to log in (#10)
* feat: init login page

add login page template

* feat: add mock login page with store

* fix: authReducer

* feat: add firebase support to login

* feat: add Github auth to store

* refactor: auth store

* refactor: simplyfi login component

* fix: auth.reducer

* refactor: rename  logInWithGithub -> logInByGithub

* fix: few typo

* feat: add proxy for backend

* fix: auth service

* fix: linter errors

* fix: for action.user mistype

* fix: add payload: any to LogInFailure

* refactor: move all auth stuff to one lib

* feat: add signUp fuction to auth.service

* feat: add signUp to auth store

* fix: linter fix

* feat: add fascade to auth

* fix: add store to auth.module

* fix: type in auth.actions

* fix: linter

* feat: use fasade in login component

* feat: more fasade methods

* feat: add test login page

* fix: add proper typing to selectors

* fix: naming in auth.facage

* fix: test login page

* fix: linter

* fix: update firebase

* fix: auth.selectors test

* fix: moved auth-specific imports from app.module

* fix:  an interface instead of class for User

* fix: class -> interface, fixed naming

* fix: minor bugfix after renaming

* fix: moved AuthResponse to separate file

* fix: rename AuthService -> AuthRepository

* fix: minor naming fixes in auth.effects

* fix: naming Login->SignIn

* fix: move State -> AuthState as seperate file

* fix: linter

* fix: autn -> auth typo in naming

* fix: more typo fixes

* fix: import in spec.ts

* feat: add entity wraper

* fix: wraper status entity hotfix

* feat: unified store entity

* fix: test & linter

* feat: add interceptor

* fix: retrive AuthState

* fix: removed unused payload in Failure Action

* fix: typed error handling

* fix: error handling

* fix: login credentials bug

Co-authored-by: Dzmitry <angrybrain@protonmail.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,21 +24,25 @@
 		"@angular/common": "~9.1.9",
 		"@angular/compiler": "~9.1.9",
 		"@angular/core": "~9.1.9",
+		"@angular/fire": "5.4.2",
 		"@angular/forms": "~9.1.9",
 		"@angular/material": "^9.2.4",
 		"@angular/platform-browser": "~9.1.9",
 		"@angular/platform-browser-dynamic": "~9.1.9",
 		"@angular/router": "~9.1.9",
+		"@firebase/auth": "^0.14.8",
 		"@ngrx/effects": "^9.2.0",
 		"@ngrx/schematics": "^9.2.0",
 		"@ngrx/store": "^9.2.0",
 		"@ngrx/store-devtools": "^9.2.0",
+		"angularfire2": "^5.4.2",
 		"codejar": "^3.0.0",
+		"firebase": "^7.17.1",
 		"highlight.js": "^10.1.1",
-		"prism": "^4.1.2",
-		"prismjs": "^1.20.0",
 		"monaco-editor": "^0.20.0",
 		"monaco-editor-webpack-plugin": "^1.9.0",
+		"prism": "^4.1.2",
+		"prismjs": "^1.20.0",
 		"rxjs": "~6.5.4",
 		"tslib": "^1.10.0",
 		"zone.js": "~0.10.2"
