--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
 		"lint": "ng lint",
 		"e2e": "ng e2e",
 		"pretty-quick": "pretty-quick --staged",
-		"heroku-postbuild": "ng buildq"
+		"heroku-postbuild": "ng build"
 	},
 	"husky": {
 		"hooks": {
