--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
 		"codejar": "^3.0.0",
 		"firebase": "^7.17.1",
 		"highlight.js": "^10.1.1",
+		"jasmine-marbles": "^0.6.0",
 		"monaco-editor": "^0.20.0",
 		"monaco-editor-webpack-plugin": "^1.9.0",
 		"prism": "^4.1.2",
