--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
 		"express": "^4.17.1",
 		"firebase": "^7.17.1",
 		"highlight.js": "^10.1.1",
+		"http-proxy-middleware": "^1.0.5",
 		"monaco-editor": "^0.20.0",
 		"monaco-editor-webpack-plugin": "^1.9.0",
 		"path": "^0.12.7",
