--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
 		"codelyzer": "^5.1.2",
 		"husky": "^4.2.5",
 		"jasmine-core": "~3.5.0",
+		"jasmine-marbles": "^0.6.0",
 		"jasmine-spec-reporter": "~4.2.1",
 		"karma": "~5.0.0",
 		"karma-chrome-launcher": "~3.1.0",
