--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Build & Lint
       run: |
         cd ./frontend
-        npm install
+        npm ci
         npm run lint
         npm run build
 
@@ -34,5 +34,5 @@ jobs:
     - name: Test
       run: |
         cd ./frontend
-        npm install
+        npm ci
         npm run test-ci
