refactor: input on enum status added with boolean getter on it, gendalf-theme .scss moved to root

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -31,7 +31,7 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/app/ui/material-theme/gendalf-theme.scss",
+                            "src/gendalf-theme.scss",
                             "node_modules/prismjs/themes/prism.css",
                             "src/styles.scss",
                             "node_modules/monaco-editor/min/vs/editor/editor.main.css"
