--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -31,7 +31,7 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+                            "src/gendalf-theme.scss",
                             "node_modules/prismjs/themes/prism.css",
                             "src/styles.scss",
                             "node_modules/monaco-editor/min/vs/editor/editor.main.css"
