--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -108,6 +108,11 @@
                             "src/styles.scss",
                             "node_modules/monaco-editor/min/vs/editor/editor.main.css"
                         ],
+												"stylePreprocessorOptions": {
+													"includePaths": [
+														"src/app/libs/common-components/shared"
+													]
+												},
                         "scripts": [
                             "./node_modules/prismjs/prism.js"
                         ]
