--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
 		"jasmine-marbles": "^0.6.0",
 		"monaco-editor": "^0.20.0",
 		"monaco-editor-webpack-plugin": "^1.9.0",
+		"ngx-avatar": "^4.0.0",
 		"path": "^0.12.7",
 		"prism": "^4.1.2",
 		"prismjs": "^1.20.0",
