--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
 		"@ngrx/schematics": "^9.2.0",
 		"@ngrx/store": "^9.2.0",
 		"@ngrx/store-devtools": "^9.2.0",
+		"@ngx-translate/core": "^13.0.0",
+		"@ngx-translate/http-loader": "^6.0.0",
 		"angularfire2": "^5.4.2",
 		"codejar": "^3.0.0",
 		"express": "^4.17.1",
