--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
 		"@ngrx/schematics": "^9.2.0",
 		"@ngrx/store": "^9.2.0",
 		"@ngrx/store-devtools": "^9.2.0",
+		"@ngx-translate/core": "^13.0.0",
+		"@ngx-translate/http-loader": "^6.0.0",
 		"angularfire2": "^5.4.2",
 		"codejar": "^3.0.0",
 		"express": "^4.17.1",
@@ -46,6 +48,7 @@
 		"jasmine-marbles": "^0.6.0",
 		"monaco-editor": "^0.20.0",
 		"monaco-editor-webpack-plugin": "^1.9.0",
+		"ngx-avatar": "^4.0.0",
 		"path": "^0.12.7",
 		"prism": "^4.1.2",
 		"prismjs": "^1.20.0",
