--- a/backend/package.json
+++ b/backend/package.json
@@ -70,7 +70,7 @@
     "@types/swagger-ui-express": "3.0.0",
     "@types/yeoman-generator": "3.1.0",
     "chai": "4.2.0",
-    "jsdoc": "3.5.5",
+    "jsdoc": "^3.6.6",
     "mocha": "6.2.0",
     "nodemon": "1.18.10",
     "source-map-loader": "0.2.4",
