feat: added to buton resizable icons with demo

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,5 +19,6 @@
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
-  }
+  },
+  "member-access": true
 }
