--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
 		"jasmine-marbles": "^0.6.0",
 		"monaco-editor": "^0.20.0",
 		"monaco-editor-webpack-plugin": "^1.9.0",
+		"ng-recaptcha": "^6.0.2",
 		"ngx-avatar": "^4.0.0",
 		"path": "^0.12.7",
 		"prism": "^4.1.2",
