--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "src"
   ],
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "2.4.3",
     "compression": "1.7.1",
     "connect-mongo": "2.0.3",
