feat: refactor sign up method

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
 		"@ngx-translate/core": "^13.0.0",
 		"@ngx-translate/http-loader": "^6.0.0",
 		"angularfire2": "^5.4.2",
+		"axios": "^0.21.1",
 		"codejar": "^3.0.0",
 		"express": "^4.17.1",
 		"firebase": "^7.17.1",
@@ -48,7 +49,9 @@
 		"jasmine-marbles": "^0.6.0",
 		"monaco-editor": "^0.20.0",
 		"monaco-editor-webpack-plugin": "^1.9.0",
+		"ng-recaptcha": "^7.0.1",
 		"ngx-avatar": "^4.0.0",
+		"ngx-mask": "^11.1.4",
 		"path": "^0.12.7",
 		"prism": "^4.1.2",
 		"prismjs": "^1.20.0",
