--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "src"
   ],
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "2.4.3",
     "compression": "1.7.1",
     "connect-mongo": "2.0.3",
@@ -70,7 +71,7 @@
     "@types/swagger-ui-express": "3.0.0",
     "@types/yeoman-generator": "3.1.0",
     "chai": "4.2.0",
-    "jsdoc": "^3.6.6",
+    "jsdoc": "3.6.6",
     "mocha": "6.2.0",
     "nodemon": "1.18.10",
     "source-map-loader": "0.2.4",
